src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: #343a40;
  color: #fafaf9;
  font-family: 'Sono', sans-serif;
  padding: 48px 64px;
}

/* MAIN LAYOUT */
.root {
  max-width: 1500px;
  margin: 0 auto;
}

.header {
  margin-bottom: 40px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.main {
  display: grid;
  grid-template-columns: 250px 1fr;
  gap: 48px;
}

@media (max-width: 900px) {
  .main {
    grid-template-columns: 1fr;
  }
}

/* ELEMENTS */

.logo {
  display: flex;
  align-items: center;
  gap: 16px;
}

.logo img {
  width: 68px;
  height: 68px;
}

h1 {
  font-size: 42px;
  text-transform: uppercase;
  font-family: 'Coiny', sans-serif;
  line-height: 1;
  margin-top: 6px;
}

.category {
  margin-bottom: 16px;
}

.note {
  font-size: 20px;
  line-height: 1.4;
  background-color: #495057;
  margin-bottom: 16px;
  padding: 16px 24px;
  letter-spacing: -1px;
  border-radius: 16px;

  display: flex;
  align-items: center;
  gap: 24px;
}

@media (max-width: 1200px) {
  .note {
    flex-direction: column;
    align-items: flex-end;
    gap: 12px;
  }
}

.tag {
  text-transform: uppercase;
  font-size: 14px;
  font-family: 'Coiny', sans-serif;
  padding-top: 3px;
  padding-left: 10px;
  padding-right: 10px;
  border-radius: 100px;
}

.complete-button {
  margin-left: auto;
  flex-shrink: 0;

  display: flex;
  gap: 8px;
}

.complete-button button {
  border: none;
  background-color: #868e96;
  font-size: 18px;
  padding: 6px 12px;
  border-radius: 100px;
  color: inherit;
  font-family: inherit;
  font-weight: 600;
  cursor: pointer;
  transition: 0.3s;
}

.complete-button button:hover {
  background-color: #292524;
}

ul {
  list-style: none;
}

.source:link,
.source:visited {
  color: #a8a29e;
  text-decoration: none;
  margin-left: 12px;
  transition: 0.3s;
}

.source:hover,
.source:active {
  color: #3b82f6;
}

.btn {
  border: none;
  font-family: 'Coiny', sans-serif;
  line-height: 1;
  text-transform: uppercase;
  font-size: 17px;
  padding: 16px 0 13px;
  background-image: linear-gradient(135deg, #3b82f6, #ef4444, #16a34a, #eab308);
  color: inherit;
  border-radius: 100px;
  cursor: pointer;
  transition: 0.3s;
}

.btn:hover {
  transform: scale(110%) rotate(-2deg);
}

.btn-large {
  font-size: 20px;
  padding: 20px 32px 17px;
}

.btn-all-categories {
  margin-bottom: 16px;
  width: 100%;
}

.btn-category {
  width: 100%;
  background-image: none;
}

/* FORM */
.note-form {
  background-color: #495057;
  margin-bottom: 40px;
  padding: 16px 32px;
  display: flex;
  align-items: center;
  gap: 16px;
  border-radius: 16px;
}

.note-form input,
.note-form select {
  width: 220px;
  background-color: #868e96;
  border: none;
  border-radius: 100px;
  padding: 16px;
  font-size: 18px;
  color: inherit;
  font-family: inherit;
}

.note-form input::placeholder {
  color: #343a40;
}

.note-form input:first-child {
  flex-grow: 1;
}

.note-form span {
  font-weight: 600;
  font-size: 18px;
  margin-right: 18px;
}

@media (max-width: 1000px) {
  body {
    padding: 32px 48px;
  }

  .note-form {
    flex-direction: column;
    align-items: stretch;
  }

  .note-form input,
  .note-form select {
    width: auto;
  }
}

/* PAGINATION */
.container-note-pagination {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.pagination {
  margin-top: 32px;
  grid-column: 2;
  display: flex;
  gap: 12px;
}

.btn-page {
  /* center the text */
  display: flex;
  align-items: center;
  justify-content: center;

  border-style: none;
  background: inherit;
  color: inherit;
  font-family: 'Coiny', sans-serif;
  font-size: 24px;
  width: 40px;
  height: 40px;
  cursor: pointer;
  border-radius: 100%;
}

.btn-page-active {
  background-image: linear-gradient(135deg, #3b82f6, #ef4444, #16a34a, #eab308);
}

